# sealRemovalTool

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run.py  setup.py
stamp_remover/: __init__.py  config.py  main.py
stamp_remover/core/: __init__.py  image_processor.py  pdf_processor.py  stamp_detector.py  thread_manager.py
stamp_remover/ui/: __init__.py  main_window.py  ui_main.py  去印章.ui
stamp_remover/utils/: __init__.py  exceptions.py  helpers.py  logger.py  logging_config.py  memory_manager.py
tests/: test_basic.py  test_bug_fixes.py  test_comprehensive.py  test_pdf_regeneration.py
